--- a/config/database.yml
+++ b/config/database.yml
@@ -6,3 +6,12 @@ development:
   username: postgres
   password: postgres
   host: localhost
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: task_manager_test
+  pool: 5
+  username: postgres
+  password: postgres
+  host: localhost
